# club-manager

./: .gitignore  LICENSE
backend/: Cargo.toml  build.rs
backend/config/: default.toml  development.toml
backend/migrations/: 001__create_users_table.sql  002__create_clubs_table.sql  003__create_user_roles_table.sql  V1__create_users_table.sql  V2__create_clubs_table.sql  V3__create_user_roles_table.sql
backend/src/: main.rs
backend/src/controllers/: club_controller.rs  mod.rs  user_controller.rs
backend/src/graphql/: schema.rs
backend/src/graphql/resolvers/: club_resolver.rs  mod.rs  user_resolver.rs
backend/src/models/: club.rs  jwt_models.rs  mod.rs  user.rs  user_role.rs
backend/src/services/: auth_service.rs  club_service.rs  mod.rs
backend/src/utils/: auth.rs  db_pool.rs  hashing.rs  mod.rs  normalize.rs  settings.rs
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/components/: ClubForm.tsx  LoginForm.tsx  SignupForm.tsx  UserRoleTable.tsx
frontend/src/graphql/: mutations.ts  queries.ts
frontend/src/pages/: ClubManagementPage.tsx  LoginPage.tsx  SignupPage.tsx
frontend/src/services/: apiService.ts  authService.ts
infra/: docker-compose.yml
