[package]
name = "backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# 라이브러리
actix-web = "4.0"
async-graphql = "3.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
redis = "0.22"
tokio = { version = "1.0", features = ["full"] }

# 환경 세팅
config = "0.13"
dotenv = "0.15"

# 로그
log = "0.4"
env_logger = "0.10" # 기본적인 로깅 백엔드

# JSON 및 데이터 처리
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # JSON 처리용

# 전역 변수 처리
once_cell = "1.13"

[build-dependencies]
# TOML 파일 처리
toml = "0.5"